# coo_agentic_workbench

./: .dockerignore  .env.example  .gitignore  .railwayignore  ACCOUNT-OPENING-AGENT-ARCHITECTURE.md  AGENT-ARCHITECTURE-STYLE-ANALYSIS.md  AGENT-TEST-REPORT.md  AGENT_ONBOARDING.md  CHANGELOG.md  DCE-AO-SA1-Intake-Triage.yml  DCE-HUB-CURRENT-SITUATION-ANALYSIS.md  DCE-current-situation.md  DEPLOY.md  Dockerfile  Dockerfile.orchestrator  Dockerfile.sa3  Dockerfile.sa4  Dockerfile.sa5  Dockerfile.sa6  Dockerfile.sa7  FIXES-SUMMARY.md  GAP-ANALYSIS-V1-TO-V2.md  HANDOFF.md  LOCAL_SETUP.md  Makefile  QA-AUDIT-REPORT.md  README.md  Report.md  angular.json  docker-compose.yml  ideation_chat_original.ts  package-lock.json  package.json  proxy.conf.json  railway.json  render.yaml  requirements.txt  tailwind.config.js  tsconfig.app.json  tsconfig.json  (+1 more)
.claude/: settings.local.json
server/mcp-python/: .dockerignore  .env.example  Dockerfile  Jenkinsfile  db.py  db_dump.sql  main.py  pyproject.toml  railway.toml  registry.py  requirements.txt  rest_server.py  start.py
server/mcp-python/openshift/: configmap.yaml  deployment.yaml  route.yaml  secret.yaml  service.yaml
server/mcp-python/test files/: test_all_tools.bat  test_all_tools.sh  test_runner.py
server/mcp-python/tools/: __init__.py  audit.py  autofill.py  bundling.py  classification.py  dashboard.py  documents.py  evergreen.py  governance.py  governance_ext.py  ideation.py  jurisdiction.py  kb_search.py  monitoring.py  notifications.py  npa_data.py  prospects.py  risk.py  risk_ext.py  session.py  workflow.py
(+643 files in other folders)
